--- a/p8105_hw2_ym3077.md
+++ b/p8105_hw2_ym3077.md
@@ -250,3 +250,145 @@ from incinerated trash.
 For the available data, Professor Trash Wheel collected a total of
 246.74 tons of trash. In June 2022, Gwynnda collected a total of
 1.812^{4} cigarette butts.
+
+## Problem 3
+
+Load datasets
+
+``` r
+zillow <- read_csv("data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv") |> 
+ janitor::clean_names()
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+zipcode <- read_csv("data/Zip Codes.csv") |> 
+ janitor::clean_names()
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Clean datasets
+
+``` r
+names(zillow)
+```
+
+    ##   [1] "region_id"   "size_rank"   "region_name" "region_type" "state_name" 
+    ##   [6] "state"       "city"        "metro"       "county_name" "x2015_01_31"
+    ##  [11] "x2015_02_28" "x2015_03_31" "x2015_04_30" "x2015_05_31" "x2015_06_30"
+    ##  [16] "x2015_07_31" "x2015_08_31" "x2015_09_30" "x2015_10_31" "x2015_11_30"
+    ##  [21] "x2015_12_31" "x2016_01_31" "x2016_02_29" "x2016_03_31" "x2016_04_30"
+    ##  [26] "x2016_05_31" "x2016_06_30" "x2016_07_31" "x2016_08_31" "x2016_09_30"
+    ##  [31] "x2016_10_31" "x2016_11_30" "x2016_12_31" "x2017_01_31" "x2017_02_28"
+    ##  [36] "x2017_03_31" "x2017_04_30" "x2017_05_31" "x2017_06_30" "x2017_07_31"
+    ##  [41] "x2017_08_31" "x2017_09_30" "x2017_10_31" "x2017_11_30" "x2017_12_31"
+    ##  [46] "x2018_01_31" "x2018_02_28" "x2018_03_31" "x2018_04_30" "x2018_05_31"
+    ##  [51] "x2018_06_30" "x2018_07_31" "x2018_08_31" "x2018_09_30" "x2018_10_31"
+    ##  [56] "x2018_11_30" "x2018_12_31" "x2019_01_31" "x2019_02_28" "x2019_03_31"
+    ##  [61] "x2019_04_30" "x2019_05_31" "x2019_06_30" "x2019_07_31" "x2019_08_31"
+    ##  [66] "x2019_09_30" "x2019_10_31" "x2019_11_30" "x2019_12_31" "x2020_01_31"
+    ##  [71] "x2020_02_29" "x2020_03_31" "x2020_04_30" "x2020_05_31" "x2020_06_30"
+    ##  [76] "x2020_07_31" "x2020_08_31" "x2020_09_30" "x2020_10_31" "x2020_11_30"
+    ##  [81] "x2020_12_31" "x2021_01_31" "x2021_02_28" "x2021_03_31" "x2021_04_30"
+    ##  [86] "x2021_05_31" "x2021_06_30" "x2021_07_31" "x2021_08_31" "x2021_09_30"
+    ##  [91] "x2021_10_31" "x2021_11_30" "x2021_12_31" "x2022_01_31" "x2022_02_28"
+    ##  [96] "x2022_03_31" "x2022_04_30" "x2022_05_31" "x2022_06_30" "x2022_07_31"
+    ## [101] "x2022_08_31" "x2022_09_30" "x2022_10_31" "x2022_11_30" "x2022_12_31"
+    ## [106] "x2023_01_31" "x2023_02_28" "x2023_03_31" "x2023_04_30" "x2023_05_31"
+    ## [111] "x2023_06_30" "x2023_07_31" "x2023_08_31" "x2023_09_30" "x2023_10_31"
+    ## [116] "x2023_11_30" "x2023_12_31" "x2024_01_31" "x2024_02_29" "x2024_03_31"
+    ## [121] "x2024_04_30" "x2024_05_31" "x2024_06_30" "x2024_07_31" "x2024_08_31"
+
+``` r
+zillow_long <- zillow |> 
+  pivot_longer(
+    cols = starts_with("x"),
+    names_to = "date",
+    values_to = "zori"
+  ) |>
+  mutate(
+    date = str_remove(date, "^x"),    
+    date = ymd(date),               
+    year = year(date),
+    month = month(date, label = TRUE, abbr = FALSE),
+    zip = as.character(region_name)
+  )
+
+zipcode_clean <- zipcode |> 
+  select(zip_code, borough = county, neighborhood) |> 
+  rename(zip = zip_code) |> 
+  mutate(zip = as.character(zip))
+```
+
+Merge datasets
+
+``` r
+zillow_merged <- left_join(zillow_long, zipcode_clean, by = "zip", relationship = "many-to-many")
+```
+
+Organize merged dataset
+
+``` r
+n_distinct(zillow_merged$zip)
+```
+
+    ## [1] 149
+
+``` r
+n_distinct(zillow_merged$neighborhood)
+```
+
+    ## [1] 43
+
+``` r
+zillow_merged <- zillow_merged |>
+  select(zip, region_id, region_name, region_type, state, city, county_name, borough, 
+         neighborhood, year, month, date, zori, everything(), -state_name) |>
+  arrange(zip, year, match(month, month.name))
+zillow_merged
+```
+
+    ## # A tibble: 17,516 × 15
+    ##    zip   region_id region_name region_type state city     county_name    borough
+    ##    <chr>     <dbl>       <dbl> <chr>       <chr> <chr>    <chr>          <chr>  
+    ##  1 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  2 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  3 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  4 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  5 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  6 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  7 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  8 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ##  9 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ## 10 10001     61615       10001 zip         NY    New York New York Coun… New Yo…
+    ## # ℹ 17,506 more rows
+    ## # ℹ 7 more variables: neighborhood <chr>, year <dbl>, month <ord>, date <date>,
+    ## #   zori <dbl>, size_rank <dbl>, metro <chr>
+
+The resulting tidy dataset `zillow_merged` contains 17,516 observations
+and 16 variables, where each row represents the rental price index
+(`zori`) for a specific ZIP code and month. After merging Zillow’s
+housing data with zipcode geographic information, the tidy dataset
+includes identifiers for region, state, city, county (`county_name`),
+borough, and neighborhood. There are 149 unique ZIP codes and 43 unique
+neighborhoods represented in the data. The `zillow_merged` preserved
+distinct classification schemes: `county_name` from the original Zillow
+data and `borough`/`neighborhood` from the ZIP code dataset; allowing
+for future flexible geographic analysis across multiple administrative
+levels.
