--- a/p8105_hw2_ym3077.Rmd
+++ b/p8105_hw2_ym3077.Rmd
@@ -178,6 +178,19 @@ Merge datasets
 zillow_merged <- left_join(zillow_long, zipcode_clean, by = "zip", relationship = "many-to-many")
 ```
 
+Organize merged dataset
+```{r}
+zillow_merged <- zillow_merged |>
+  select(zip, region_id, region_name, region_type, state, city, county_name, borough, 
+         neighborhood, year, month, date, zori, everything(), -state_name) |>
+  arrange(zip, year, match(month, month.name))
+zillow_merged
+
+n_distinct(zillow_merged$zip)
+n_distinct(zillow_merged$neighborhood)
+```
+
+The resulting tidy dataset `zillow_merged` contains 17,516 observations and 15 variables, where each row represents the rental price index (`zori`) for a specific ZIP code and month. After merging Zillow’s housing data with zipcode geographic information, the tidy dataset includes identifiers for region, state, city, county (`county_name`), borough, and neighborhood. There are 149 unique ZIP codes and 43 unique neighborhoods represented in the data. The `zillow_merged` preserved distinct classification schemes: `county_name` from the original Zillow data and `borough`/`neighborhood` from the ZIP code dataset; allowing for future flexible geographic analysis across multiple administrative levels.
 
 
 
