--- a/p8105_hw2_ym3077.md
+++ b/p8105_hw2_ym3077.md
@@ -23,6 +23,8 @@ library(tidyverse)
 ``` r
 library(lubridate)
 library(readxl)
+library(dplyr)
+library(tidyr)
 ```
 
 Load datasets
@@ -345,21 +347,10 @@ zillow_merged <- left_join(zillow_long, zipcode_clean, by = "zip", relationship 
 Organize merged dataset
 
 ``` r
-n_distinct(zillow_merged$zip)
-```
-
-    ## [1] 149
-
-``` r
-n_distinct(zillow_merged$neighborhood)
-```
-
-    ## [1] 43
-
-``` r
 zillow_merged <- zillow_merged |>
-  select(zip, region_id, region_name, region_type, state, city, county_name, borough, 
-         neighborhood, year, month, date, zori, everything(), -state_name) |>
+  select(-state_name) |>
+  select(zip, region_id, region_name, region_type, state, city, county_name, borough,
+         neighborhood, year, month, date, zori, everything()) |>
   arrange(zip, year, match(month, month.name))
 zillow_merged
 ```
@@ -381,14 +372,92 @@ zillow_merged
     ## # ℹ 7 more variables: neighborhood <chr>, year <dbl>, month <ord>, date <date>,
     ## #   zori <dbl>, size_rank <dbl>, metro <chr>
 
+``` r
+n_distinct(zillow_merged$zip)
+```
+
+    ## [1] 149
+
+``` r
+n_distinct(zillow_merged$neighborhood)
+```
+
+    ## [1] 43
+
 The resulting tidy dataset `zillow_merged` contains 17,516 observations
-and 16 variables, where each row represents the rental price index
+and 15 variables, where each row represents the rental price index
 (`zori`) for a specific ZIP code and month. After merging Zillow’s
 housing data with zipcode geographic information, the tidy dataset
 includes identifiers for region, state, city, county (`county_name`),
 borough, and neighborhood. There are 149 unique ZIP codes and 43 unique
 neighborhoods represented in the data. The `zillow_merged` preserved
-distinct classification schemes: `county_name` from the original Zillow
+distinct classification methods: `county_name` from the original Zillow
 data and `borough`/`neighborhood` from the ZIP code dataset; allowing
 for future flexible geographic analysis across multiple administrative
 levels.
+
+``` r
+zip_missing <- anti_join(zipcode_clean, zillow_long, by = c("zip"))
+zip_missing
+```
+
+    ## # A tibble: 171 × 3
+    ##    zip   borough neighborhood              
+    ##    <chr> <chr>   <chr>                     
+    ##  1 10464 Bronx   Southeast Bronx           
+    ##  2 10474 Bronx   Hunts Point and Mott Haven
+    ##  3 10475 Bronx   Northeast Bronx           
+    ##  4 10499 Bronx   <NA>                      
+    ##  5 10550 Bronx   <NA>                      
+    ##  6 10704 Bronx   <NA>                      
+    ##  7 10705 Bronx   <NA>                      
+    ##  8 10803 Bronx   <NA>                      
+    ##  9 11202 Kings   <NA>                      
+    ## 10 11224 Kings   Southern Brooklyn         
+    ## # ℹ 161 more rows
+
+`zip_missing` dataset consist of 171 ZIP codes that appear in the ZIP
+code dataset but not in the Zillow Rental Price dataset. For example,
+ZIP codes such as 10475, 11245, or 10082 appear in `zipcode_clean` but
+not in `zillow_long`, it suggests that Zillow did not report or collect
+rental price information for these areas. Possible reasons are areas
+with very few rental listings, Zillow might suppress data to protect
+individual privacy or due to insufficient sample size; or some ZIP codes
+may be primarily industrial/commercial, with have low residential rental
+activity, making difficult for Zillow to estimate or report rental
+prices.
+
+Covid-19 Drop Table
+
+``` r
+covid19_drops <- zillow_merged |>
+  filter(date %in% as.Date(c("2020-01-31", "2021-01-31"))) |>
+  select(zip, borough, neighborhood, date, zori) |>
+  pivot_wider(
+    names_from = date,
+    values_from = zori,
+    names_prefix = "rent_") |>
+  mutate(price_change = `rent_2021-01-31` - `rent_2020-01-31`) |>
+  arrange(price_change) |>
+  slice(1:10)
+
+covid19_drops
+```
+
+    ## # A tibble: 10 × 6
+    ##    zip   borough  neighborhood  `rent_2020-01-31` `rent_2021-01-31` price_change
+    ##    <chr> <chr>    <chr>                     <dbl>             <dbl>        <dbl>
+    ##  1 10007 New York Lower Manhat…             6334.             5422.        -913.
+    ##  2 10069 New York <NA>                      4623.             3875.        -748.
+    ##  3 10009 New York Lower East S…             3406.             2692.        -714.
+    ##  4 10016 New York Gramercy Par…             3731.             3019.        -712.
+    ##  5 10001 New York Chelsea and …             4108.             3398.        -710.
+    ##  6 10002 New York Lower East S…             3645.             2935.        -710.
+    ##  7 10004 New York Lower Manhat…             3150.             2444.        -706.
+    ##  8 10038 New York Lower Manhat…             3573.             2876.        -698.
+    ##  9 10012 New York Greenwich Vi…             3629.             2942.        -686.
+    ## 10 10010 New York Gramercy Par…             3697.             3012.        -685.
+
+The table shows the 10 ZIP codes in New York City that experienced the
+largest drops in rental prices between January 2020 and January 2021,
+during the COVID-19 pandemic.
