--- a/p8105_hw2_ym3077.md
+++ b/p8105_hw2_ym3077.md
@@ -23,8 +23,6 @@ library(tidyverse)
 ``` r
 library(lubridate)
 library(readxl)
-library(dplyr)
-library(tidyr)
 ```
 
 Load datasets
@@ -170,7 +168,7 @@ market trends across nearly seven decades.
 Read and clean Mr. Trash Wheel data
 
 ``` r
-mr_trash <- read_excel("data/202409 Trash Wheel Collection Data.xlsx",
+mr_trash <- read_excel("data/202509 Trash Wheel Collection Data.xlsx",
                        sheet = "Mr. Trash Wheel", skip = 1) |> 
   janitor::clean_names() |> 
   drop_na(dumpster) |> 
@@ -191,7 +189,7 @@ mr_trash <- read_excel("data/202409 Trash Wheel Collection Data.xlsx",
 Read and clean Professor Trash Wheel data
 
 ``` r
-prof_trash <- read_excel("data/202409 Trash Wheel Collection Data.xlsx",
+prof_trash <- read_excel("data/202509 Trash Wheel Collection Data.xlsx",
                          sheet = "Professor Trash Wheel", skip = 1) |>
   janitor::clean_names() |>
   drop_na(dumpster) |>
@@ -203,8 +201,8 @@ prof_trash <- read_excel("data/202409 Trash Wheel Collection Data.xlsx",
 Read and clean Gwynnda data
 
 ``` r
-gwynnda_trash <- read_excel("data/202409 Trash Wheel Collection Data.xlsx",
-                            sheet = "Gwynnda Trash Wheel", skip = 1) |>
+gwynnda_trash <- read_excel("data/202509 Trash Wheel Collection Data.xlsx",
+                            sheet = "Gwynns Falls Trash Wheel", skip = 1) |>
   janitor::clean_names() |>
   drop_na(dumpster) |>
   mutate(
@@ -220,7 +218,7 @@ trash_wheel_all <- bind_rows(mr_trash, prof_trash, gwynnda_trash)
 trash_wheel_all
 ```
 
-    ## # A tibble: 1,033 × 15
+    ## # A tibble: 1,188 × 15
     ##    dumpster month  year date                weight_tons volume_cubic_yards
     ##       <dbl> <chr> <int> <dttm>                    <dbl>              <dbl>
     ##  1        1 May    2014 2014-05-16 00:00:00        4.31                 18
@@ -233,12 +231,12 @@ trash_wheel_all
     ##  8        8 May    2014 2014-05-28 00:00:00        3.7                  16
     ##  9        9 June   2014 2014-06-05 00:00:00        2.52                 14
     ## 10       10 June   2014 2014-06-11 00:00:00        3.76                 18
-    ## # ℹ 1,023 more rows
+    ## # ℹ 1,178 more rows
     ## # ℹ 9 more variables: plastic_bottles <dbl>, polystyrene <dbl>,
     ## #   cigarette_butts <dbl>, glass_bottles <dbl>, plastic_bags <dbl>,
     ## #   wrappers <dbl>, sports_balls <int>, homes_powered <dbl>, trash_wheel <chr>
 
-The combined dataset contains 1033 observations of trash collection
+The combined dataset contains 1188 observations of trash collection
 records from 3 Trash Wheels in Baltimore: Mr. Trash Wheel, Professor
 Trash Wheel, and Gwynnda Trash Wheel. Each observation corresponds to a
 dumpster load of trash, and includes key variables such as the date of
@@ -250,7 +248,7 @@ estimating the number of homes that could be powered using the energy
 from incinerated trash.
 
 For the available data, Professor Trash Wheel collected a total of
-246.74 tons of trash. In June 2022, Gwynnda collected a total of
+282.26 tons of trash. In June 2022, Gwynnda collected a total of
 1.812^{4} cigarette butts.
 
 ## Problem 3
